# Velites

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: backtesting.md  code_standards.md  data_handling.md  documentation.md  environment.md  git_workflow.md  gui_design.md  live_trading.md  logging.md  project_structure.md  risk_management.md  settings.local.json  testing.md  type_issues.md  web_development.md
.claude/agents/: backtest-driver.md  backtest-optimizer.md  code-architect.md  code-explorer.md  code-reviewer.md  codebase-analyzer.md  trade-log-analyzer.md
.github/workflows/: ci.yml
config/: logging.yaml
data/: knowledge_graph_v1_2.json  watchlist.json
docs/architecture/: ANALYST_ARCHITECTURE.md  COURIER_ARCHITECTURE.md  MAPPER_ARCHITECTURE.md  SCOUT_ARCHITECTURE.md  SCRIBE_ARCHITECTURE.md  VELITES_ARCHITECTURE.md
docs/planning/: 20260603_typing_debt.md
docs/product_specs/: KNOWLEDGE_GRAPH_PLAN_v1_2.md
docs/superpowers/plans/: 2026-06-03-velites-phases-0-2-and-cheap-checks.md
docs/superpowers/specs/: 2026-06-03-velites-resumption-execution-design.md
scripts/: replay_signals.py  run_pipeline.py  save_enriched.py  setup_dev.sh  smoke_test.py  view_signals.py
src/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
src/modules/analyst/: __init__.py  confluence.py  exceptions.py  llm_agent.py  models.py  sentiment_engine.py
src/modules/courier/: __init__.py  dispatcher.py  exceptions.py  liquidity_guard.py  models.py
src/modules/mapper/: __init__.py  exceptions.py  graph_engine.py  models.py  supply_chain.py  ticker_normalizer.py
src/modules/scout/: __init__.py  arxiv_fetcher.py  exceptions.py  market_fetcher.py  models.py  news_fetcher.py
src/modules/scribe/: __init__.py  db_models.py  exceptions.py  journal.py
src/velites/: __init__.py  config.py  logging.py  main.py
src/velites/modules/: __init__.py
src/velites/modules/analyst/: __init__.py  confluence.py  exceptions.py  llm_agent.py  sentiment_engine.py
src/velites/modules/courier/: __init__.py  dispatcher.py  exceptions.py  liquidity_guard.py  models.py
src/velites/modules/mapper/: __init__.py  exceptions.py  graph_engine.py  supply_chain.py  ticker_normalizer.py
src/velites/modules/scout/: __init__.py  arxiv_fetcher.py  exceptions.py  market_fetcher.py  news_fetcher.py
src/velites/modules/scribe/: __init__.py  exceptions.py  journal.py  models.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_mapper_module.py  test_pipeline.py
tests/unit/: __init__.py
tests/unit/modules/: __init__.py
tests/unit/modules/analyst/: __init__.py  test_confluence.py  test_llm_agent.py  test_sentiment_engine.py
tests/unit/modules/courier/: __init__.py  test_dispatcher.py  test_liquidity_guard.py
tests/unit/modules/mapper/: __init__.py  test_graph_engine.py  test_supply_chain.py  test_ticker_normalizer.py
tests/unit/modules/scout/: __init__.py  test_arxiv_fetcher.py  test_market_fetcher.py  test_news_fetcher.py
tests/unit/modules/scribe/: __init__.py  test_journal.py
