[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velites"
version = "0.1.0"
description = "Quantamental Research Agent for AI/Semiconductor supply chain analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Velites Team" }
]
keywords = ["quantamental", "research", "semiconductor", "ai", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.0",

    # Async
    "asyncio>=3.4",
    "httpx>=0.24",

    # Data fetching
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "yfinance>=0.2",

    # Knowledge graph
    "networkx>=3.0",
    "rapidfuzz>=3.0",

    # LLM
    "openai>=1.0",
    "anthropic>=0.18",

    # NLP/ML
    "transformers>=4.30",
    "torch>=2.0",

    # Database
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
]
prod = [
    "alpaca-py>=0.10",
    "asyncpg>=0.28",
]

[project.scripts]
velites = "velites.main:main"

[project.urls]
Homepage = "https://github.com/your-org/velites"
Documentation = "https://github.com/your-org/velites#readme"
Repository = "https://github.com/your-org/velites"

[tool.hatch.build.targets.wheel]
packages = ["src/velites"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=velites --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "yfinance.*",
    "transformers.*",
    "torch.*",
    "networkx.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["velites"]
