[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velites"
version = "0.1.0"
description = "Quantamental Research Agent for AI/Semiconductor supply chain analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Velites Team" }
]
keywords = ["quantamental", "research", "semiconductor", "ai", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.0",

    # Async
    "asyncio>=3.4",
    "httpx>=0.24",

    # Scheduling
    "apscheduler>=3.10",

    # Data fetching
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "yfinance>=0.2",

    # Knowledge graph
    "networkx>=3.0",
    "rapidfuzz>=3.0",

    # LLM
    "openai>=1.0",
    "anthropic>=0.18",

    # NLP/ML
    "transformers>=4.30",
    "torch>=2.0",

    # Database
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
]
prod = [
    "alpaca-py>=0.10",
    "asyncpg>=0.28",
]

[project.scripts]
velites = "main:main"

[project.urls]
Homepage = "https://github.com/your-org/velites"
Documentation = "https://github.com/your-org/velites#readme"
Repository = "https://github.com/your-org/velites"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --cov=modules --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
# strict mode relaxed 2026-06-03 - see docs/planning/20260603_typing_debt.md for the
# backlog and the plan to restore strict incrementally.

[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "yfinance.*",
    "transformers.*",
    "torch.*",
    "networkx.*",
]
ignore_missing_imports = true

# Typing debt: graph_engine and ticker_normalizer operate over untyped JSON dicts
# (Any-typed networkx nodes and dict.get chains). ignore_errors until strict is restored
# incrementally per docs/planning/20260603_typing_debt.md.
[[tool.mypy.overrides]]
module = [
    "modules.mapper.graph_engine",
    "modules.mapper.ticker_normalizer",
    "modules.mapper.supply_chain",
]
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B904",   # raise-without-from-inside-except: existing pattern; chaining adds noise without safety gain here
    "UP042",  # replace-str-enum: str+Enum pattern is explicit; StrEnum migration is a behavioral refactor
]

[tool.ruff.lint.isort]
known-first-party = ["modules", "config", "logging_config", "exceptions"]
